[esa2github] Update post.

--- a/articles/309423d26a1aaa.md
+++ b/articles/309423d26a1aaa.md
@@ -1,8 +1,8 @@
 ---
 title: "無料で商用にも使える日本の郵便番号APIをリリースしました"
 emoji: "💌"
-type: "tech"
-topics: ["api", "php", "symfony", ""]
+type: "idea"
+topics: ["api", "php", "symfony", "郵便番号"]
 published: true
 ---
 
