[esa2github] Update post.

--- a/articles/33250dc0a5845c.md
+++ b/articles/33250dc0a5845c.md
@@ -6,6 +6,12 @@ topics: ["githubactions", "render", "deploy"]
 published: true
 ---
 
+# 2025/05/13 追記
+
+RenderのGitHub連携機能において、「CIチェックをパスした場合のみ自動デプロイ」がついにできるようになったので、もはやGitHub Actionsからマニュアルでデプロイする必要はなくなりました🙌
+
+https://render.com/docs/deploys#integrating-with-ci
+
 # 作ったもの
 
 GitHub Actionsのワークフローから [Render.com](https://render.com/) へのデプロイを行うためのActionです。
