[esa2github] Ship It!

--- a/articles/b748e3d10b60b6.md
+++ b/articles/b748e3d10b60b6.md
@@ -60,7 +60,7 @@ Symfonyアドベントカレンダー
 
 そこで、日本語を読みたいユーザーと英語を読みたいユーザーに対してそれぞれ明示的にロケールを設定する処理がどこかに必要になります。
 
-例えば **悪い例として**、`Accept-Language` ヘッダーの内容をもとに暗黙的にロケールを設定するという方法も考えれます。
+例えば **あまり良くない例として**、`Accept-Language` ヘッダーの内容をもとに暗黙的にロケールを設定する（[コンテントネゴシエーション](https://developer.mozilla.org/ja/docs/Web/HTTP/Guides/Content_negotiation)）という方法も考えれます。
 
 ```php:src/Controller/HomeController.php
 #[Route(path: '/', name: 'home_')]
@@ -191,6 +191,30 @@ class AddLocaleController extends AbstractController
 +     _controller: App\Controller\AddLocaleController
 ```
 
+# 4. 全ページに `hreflang` 属性を適切に設定する
+
+最後に、検索エンジンのクローラーに「このページには多言語バージョンがありますよ」と伝えるために、多言語化されているすべてのページに `hreflang` 属性を適切に設定します。
+
+> 参考：[hreflang属性の書き方と注意点 | HTMLタグとディスクリプション | テクニカルSEO BLOG](https://technical-seo.jp/hreflang/)
+
+```twig:templates/base.html.twig
+<head>
+  {# 略 #}
+
+  {% set alternates = {'x-default': 'en', 'en': 'en', 'ja': 'ja'} %}
+  {% for hreflang, lang in alternates %}
+    {% set href = url(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')|merge({'_locale': lang})) %}
+    <link rel="alternate" href="{{ href }}" hreflang="{{ hreflang }}">
+  {% endfor %}
+</head>
+```
+
+```html:レンダリング結果
+<link rel="alternate" href="https://example.com/en/foo/bar" hreflang="x-default">
+<link rel="alternate" href="https://example.com/en/foo/bar" hreflang="en">
+<link rel="alternate" href="https://example.com/ja/foo/bar" hreflang="ja">
+```
+
 # まとめ
 
 というわけで、
@@ -198,7 +222,8 @@ class AddLocaleController extends AbstractController
 * まずはSymfony Translationを導入して
 * 前提としてURLにロケール名を含めるようにして
 * ロケール共通のページしか提供しないURLもある場合はルーティング設定で除外するようにして
-* ロケールを省略したURLへのアクセスはデフォルトロケール（など）のURLにリダイレクトするようにすれば
+* ロケールを省略したURLへのアクセスはデフォルトロケール（など）のURLにリダイレクトするようにして
+* `hreflang` 属性も適切に設定しておけば
 
 **いい感じに** なると思います、というお話でした✋
 
