[esa2github] Update post.

--- a/articles/a2ce0952856142.md
+++ b/articles/a2ce0952856142.md
@@ -32,7 +32,7 @@ https://twitter.com/ttskch/status/1629808284684398592
 crontabなどに以下のようなコマンドを設定します。
 
 ```
-0 1 * * * aws s3 sync /path/to/nas s3://[バケット名]/ --delete --storage-class DEEP_ARCHIVE
+0 1 * * * aws s3 sync /path/to/nas s3://{バケット名}/ --delete --storage-class DEEP_ARCHIVE
 ```
 
 これで、日次でNASのデータ全体をS3バケットにGlacier Deep Archiveストレージクラスを使用してバックアップすることができます。
@@ -42,6 +42,14 @@ crontabなどに以下のようなコマンドを設定します。
 
 以上。簡単ですね👌
 
+ちなみに、僕が実際に設定しているcrontabレコードは以下の内容です。
+
+```
+0 1 * * * /bin/bash -c 'if ls /path/to/nas >/dev/null 2>&1; then if /opt/homebrew/bin/aws s3 sync /path/to/nas s3://{バケット名}/ --delete --storage-class DEEP_ARCHIVE; then echo "$(date): AWS S3 sync completed successfully" >> ~/crontab.log; fi; fi'
+```
+
+自宅のルーターを再起動したあとなど、NASの接続が切れてマウントされてないときがたまにあるので、一応 `ls /path/to/nas` が成功する場合のみ実行するようにガードして（別にこれをしなくても、マウントされていなければ `aws s3 sync` コマンドが適切に失敗して実行自体されないので問題はないのですが、なんとなく）、さらに正常に実行完了した場合のみ `~/crontab.log` に完了日時を記録するようにしてあります。
+
 # おまけ：間違えて `--storage-class DEEP_ARCHIVE` を付けずに `aws s3 sync` を実行してしまった場合の対処方法
 
 これは僕の体験談ですが、メインのMacを買い替えたタイミングで、新しいマシンにcrontabを設定する際、間違えて `aws s3 sync /path/to/nas s3://[バケット名]/ --delete` とストレージクラスを指定せずに設定してしまい、気づいたときにはS3バケット内の不特定複数のファイルだけがStandardストレージクラスに保存されている状態になってしまいました🙄
@@ -50,13 +58,13 @@ crontabなどに以下のようなコマンドを設定します。
 
 ```shell
 # バケット内の全ファイルの情報をダンプ（ファイル数が多いと数分程度かかる）
-aws s3api list-objects-v2 --bucket [バケット名] > s3dump.json
+aws s3api list-objects-v2 --bucket {バケット名} > s3dump.json
 
 # ストレージクラスがSTANDARDであるファイルのキーだけをリスト化
 cat s3dump.json | jq '.Contents[] | select(.StorageClass == "STANDARD") | .Key' | tr -d '"' > keys.txt
 
 # 当該ファイルのストレージクラスをDEEP_ARCHIVEに変更
-cat keys.txt | xargs -I{} -S9999 aws s3 cp "s3://[バケット名]/{}" "s3://[バケット名]/{}" --storage-class DEEP_ARCHIVE
+cat keys.txt | xargs -I{} -S9999 aws s3 cp "s3://{バケット名}/{}" "s3://{バケット名}/{}" --storage-class DEEP_ARCHIVE
 ```
 
 最後のコマンドで、`xargs` に `-S` オプションで大きめの数字を渡しているのは、一部ファイルがめちゃめちゃ深い階層にあってキーの文字数がデフォルトの上限を超えてしまい正常に `xargs` に引数を渡せなくなる現象を回避するためです。（これに気づかず30分ぐらいハマりました…）
