[esa2github] Update post.

--- a/articles/40e2e3252a7152.md
+++ b/articles/40e2e3252a7152.md
@@ -2,7 +2,7 @@
 title: "Laravel版のAPI PlatformでSystem ProviderやSystem Processorをデコレートするのが難しかった話"
 emoji: "🕸️"
 type: "tech"
-topics: ["php", "apiplatform", "symfony"]
+topics: ["php", "apiplatform", "laravel"]
 published: true
 ---
 
