[esa2github] Update post.

--- a/articles/40e2e3252a7152.md
+++ b/articles/40e2e3252a7152.md
@@ -8,7 +8,7 @@ published: true
 
 # 3行で
 
-- Laravel版の [API Platofrm](https://api-platform.com/) でシステムプロセッサーをデコレートしようとしたら循環依存が発生した
+- Laravel版の [API Platofrm](https://api-platform.com/) でSystem Processorをデコレートしようとしたら循環依存が発生した
 - LLMや [@fuwasegu さんに相談](https://x.com/ttskch/status/1979104036734509510) しつつ調べたら、現状のAPI Platformの内部構造ではSystem ProviderやSystem Processorを適切な方法でデコレートすることができないということが分かった
 - ので改善案を [PR](https://github.com/api-platform/core/pull/7467) してみた
 
@@ -85,7 +85,7 @@ final class AppWriteProcessor implements ProcessorInterface
 
 - https://github.com/api-platform/laravel/blob/v4.2.2/ApiPlatformDeferredProvider.php#L173
 
-ここで `CallableProcessor`（アプリケーションが実装している各種プロセッサーを保持するChain of Responsibility）の依存に含まれるという実装になっていました。
+ここで `CallableProcessor`（アプリケーションが実装している各種Processorを保持するChain of Responsibility）の依存に含まれるという実装になっていました。
 
 そして、
 
