[esa2github] Update post.

--- a/articles/40e2e3252a7152.md
+++ b/articles/40e2e3252a7152.md
@@ -119,6 +119,18 @@ class SkipAutoconfigure
 }
 ```
 
+これを `AppWriteProcessor` に付与し、
+
+```diff
++ use App\Attribute\SkipAutoconfigure;
+
++ #[SkipAutoconfigure]
+  final class AppWriteProcessor implements ProcessorInterfacefinal
+  {
+      // ...
+  }
+```
+
 API Platformのコードの [この辺](https://github.com/api-platform/laravel/blob/v4.2.2/ApiPlatformDeferredProvider.php#L104) に
 
 ```php
