[esa2github] Update post.

--- a/articles/40e2e3252a7152.md
+++ b/articles/40e2e3252a7152.md
@@ -50,13 +50,12 @@ declare(strict_types=1);
 namespace App\State;
 
 use ApiPlatform\Metadata\Operation;
-use ApiPlatform\State\Processor\WriteProcessor;
 use ApiPlatform\State\ProcessorInterface;
 
 final class AppWriteProcessor implements ProcessorInterface
 {
     public function __construct(
-        private readonly WriteProcessor $decorated,
+        private readonly ProcessorInterface $decorated,
     ) {
     }
 
@@ -86,12 +85,23 @@ final class AppWriteProcessor implements ProcessorInterface
 - https://github.com/api-platform/laravel/blob/v4.2.2/ApiPlatformDeferredProvider.php#L173
 
 ここで `CallableProcessor`（アプリケーションが実装している各種Processorを保持するChain of Responsibility）の依存に含まれるという実装になっていました。
+つまり、`AppWriteProcessor` にも `ProcessorInterface::class` タグが付けられて `CallableProcessor` の依存に含まれることになります。
 
-そして、
+そして、`AppWriteProcessor` のコンストラクタ引数 `$decorated` の型としてある `ProcessorInterface` には、
+
+- https://github.com/api-platform/laravel/blob/v4.2.2/ApiPlatformProvider.php#L457-L464
+
+ここで `HydraLinkProcessor` または `WriteProcessor` がバインドされており、前者であった場合でも、`HydraLinkProcessor` は
+
+- https://github.com/api-platform/laravel/blob/v4.2.2/ApiPlatformProvider.php#L453-L455
+
+ここにあるとおり `WriteProcessor` に依存しているため、結論として、Laravelが `AppWriteProcessor` に対して `ProcessorInterface` 型の引数を注入するためには、`WriteProcessor` を生成する必要があります。
+
+そして最後に、
 
 - https://github.com/api-platform/laravel/blob/v4.2.2/ApiPlatformProvider.php#L432
 
-ここにあるとおり `CallableProcessor` は `WriteProcessor` の依存であるため、
+ここにあるとおり `CallableProcessor` が `WriteProcessor` の依存であるため、
 
 `CallebleProcessor` → `AppWriteProcessor` → `WriteProcessor` → `CallableProcessor` という循環依存になってしまっていたのです。
 
