[esa2github] Update post.

--- a/articles/d43ba2eb8748d7.md
+++ b/articles/d43ba2eb8748d7.md
@@ -232,4 +232,7 @@ NativeQueryを使ってもしんどくなるような、もっと複雑な集計
 
 おわり。
 
-[Symfony Advent Calendar 2025](https://qiita.com/advent-calendar/2025/symfony)、明日は空きです🥺どなたかぜひご参加ください！
+[Symfony Advent Calendar 2025](https://qiita.com/advent-calendar/2025/symfony)、~~明日は空きです🥺どなたかぜひご参加ください！~~
+[@akky](https://x.com/akky) さんが埋めてくださいました！！！
+
+https://akky.hatenablog.com/entry/2025/12/03/023723
